# ddfu

./: README.MD  __init__.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/admin_finder/: service.py
app/ddos_request/: service.py
app/dns_bruteforce/: service.py
ddfu/: __init__.py  __main__.py
ddfu/src/: __init__.py
ddfu/src/admin_finder/: service.py
ddfu/src/common/: __init__.py  file_base.py  header_service.py  progress_bar_base.py
ddfu/src/ddos_request/: service.py
ddfu/src/dns_bruteforce/: service.py
ddfu/src/dns_get_ptr/: service.py
ddfu/src/dns_resolver/: service.py
ddfu/src/fuzzing/: service.py
ddfu/src/portscan/: service.py
ddfu/utils/: parser.py
src/: __init__.py
src/admin_finder/: service.py
src/ddos_request/: service.py
src/dns_bruteforce/: service.py
utils/: parser.py
worldlist/: admin-page.txt  fazing.txt  hidden-path.txt  subdomains-100.txt  subdomains-1000.txt  swagger.txt
